commit after now
commit

--- a/MSLookUp/MSLookUp/MSLookUp/MSLookUp.csproj
+++ b/MSLookUp/MSLookUp/MSLookUp/MSLookUp.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -59,9 +59,11 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MaxLengthValidatorBehavior.cs" />
     <Compile Include="MSLookUpPage.xaml.cs">
       <DependentUpon>MSLookUpPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="NumberValidatorBehavior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchoolSelect.xaml.cs">
       <DependentUpon>SchoolSelect.xaml</DependentUpon>
@@ -89,7 +91,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Properties\Assets\" />
     <Folder Include="New Folder\" />
   </ItemGroup>
   <ItemGroup>
